# agent-manager

./: .gitignore  Cargo.toml  ITERATIVE_DEV_CORE.md  README.md  agent-names-zh-TW.json  agent.md  blueprint.md  final.md  gemini-agent-evolving.md  gemini-agent.md  knowledge_graph.md  plan.md  requirements.txt  start_gui.bat  test.md
.codex/evolution/: LESSONS.md  ptc-agent-sync.json
.codex/evolution/memory/: MEMORY.md
.codex/evolution/reviews/: 20260717T021254Z-rust-2-migration.md  20260717T041616Z-agent-content-v2-sync.md
.codex/evolution/state/: CODEX_STATE.md
agents/: AGENTS_INDEX.md  KNOWLEDGE_GRAPH.md  README.md
agents/01-醫療健康/clinical-psychologist/: SKILL.md
agents/01-醫療健康/emergency-nurse/: SKILL.md
agents/01-醫療健康/medical-doctor/: SKILL.md
agents/01-醫療健康/pharmacist/: SKILL.md
agents/01-醫療健康/traditional-medicine-doctor/: SKILL.md
agents/02-法律司法/civil-judge/: SKILL.md
agents/02-法律司法/compliance-officer/: SKILL.md
agents/02-法律司法/criminal-lawyer/: SKILL.md
agents/02-法律司法/forensic-investigator/: SKILL.md
agents/02-法律司法/legal-negotiator/: SKILL.md
agents/03-科技資訊/ai-prompt-engineer/: SKILL.md
app/: __init__.py  agent_manager.py  categories.py  config.py  evolution_engine.py  evolution_rules.py  importer.py  installer.py  llm_client.py  main.py  storage.py  template_engine.py  tool_registry.py  validator.py
src/: app.rs  categories.rs  config.rs  evolution.rs  importer.rs  installer.rs  lib.rs  llm.rs  main.rs  manager.rs  model.rs  storage.rs  template.rs  theme.rs  tool_registry.rs  validator.rs
tests/: cli_check.rs
(+295 files in other folders)
